package seedu.stockpal.data;

public interface CommandParameter {
    boolean isNull();
}
