@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor DATA_COLOR
skinparam classBackgroundColor DATA_COLOR
hide circle
skinparam classAttributeIconSize 0

package Data as DataPackage {

    class Description {
        - description : String
        + Description(String)
        + isNull() : boolean
    }

    class Name {
        - name : String
        + Name(String)
        + isNull() : boolean
    }

    class Pid {
        - pid : Integer
        + Pid(Integer)
        + isNull() : boolean
    }

    class Price {
        - price : Double
        + Price(Double)
        + isNull() : boolean
    }

    class Quantity {
        - quantity : Integer
        + Quantity(Integer)
        + isNull() : boolean
    }

    class Product {
        + Product(String, Integer, Double, String, Integer)
    }

    class ProductList {
        + ProductList(String, Integer, Double, String, Integer)
        + addProduct(Product)
        + findProductIndex(Pid) : int
        + deleteProduct(Pid)
        + updateProduct(int, Name, Quantity, Description, Price)
        + increaseAmount(int, Integer) : boolean
        + decreaseAmount(int, Integer) : boolean
        + findKeyword(ProductList, String)
        + isEmpty() : boolean
        + getSize() : int
        + get(int) : Product
        + getProducts() : List<Product>
        + toSave(Integer) : String
        + printLowQuantityProducts()
    }

    class Transaction {
        - changeInQuantity : Integer
        - time : LocalDateTime
    }

    class TransactionList {
    }

    interface CommandParameter <<Interface>> {
        + isNull() : boolean
}

ProductList *--> "products ~*" Product : > contains
ProductList -right[hidden]-> TransactionList
Product --> "1" Name
Product --> "1" Quantity
Product --> "1" Price
Product --> "1" Description
Product --> "1" Pid
Quantity -right[hidden]-> Pid
Transaction -down-> "1 " Pid
TransactionList *--> "transactions ~*" Transaction :> contains

Pid ...|> CommandParameter
Name ...|> CommandParameter
Quantity ...|> CommandParameter
Price ...|> CommandParameter
Description ...|> CommandParameter

@enduml